@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-54 Update Coupon

class "Admin Settings UI" as UI <<boundary>>
class "CouponsController" as Controller <<controller>>
class "CouponsService" as Service <<service>>
class "Coupon" as Coupon <<domain>>

UI --> Controller : PATCH /coupons/:id
Controller --> Service : delegates
Service --> Coupon : uses

note right of UI
UC-54 - Update Coupon
Actors: Admin, Manager
Pre: Coupon tồn tại
Post: Coupon được cập nhật
end note
@enduml
